[package]
name = "gmap-scraper-cli"
version = "0.1.0"
edition = "2021"
authors = ["Hendro Wibowo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = { version = "0.19.2", features = ["rustls-tls"] }
dotenv = "0.15.0"
tokio = { version = "1.20.1", features = ["full"] }
